--- a/.classpath
+++ b/.classpath
@@ -11,14 +11,14 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/software/java/javalib/vairy.timer.jar"/>
 	<classpathentry kind="lib" path="D:/software/java/javalib/vairy.debug.jar"/>
-	<classpathentry kind="lib" path="D:/software/java/javalib/vairy.fileaccess.jar"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/SWINGGUIPARTS"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/VTimer"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/VairyCommon"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
